--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "flatpickr": "^4.5.1",
+    "noty": "^3.2.0-beta",
     "sweetalert2": "^7.25.0",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
