--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "flatpickr": "^4.5.1",
     "noty": "^3.2.0-beta",
     "sweetalert2": "^7.25.0",
+    "typeface-quicksand": "^0.0.54",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
