--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
       ]
     },
     "mac": {
-      "icon": "build/icons/icon.icns"
+      "icon": "build/icons/icon.ico"
     },
     "win": {
       "icon": "build/icons/icon.ico"
@@ -59,7 +59,9 @@
     "axios": "^0.16.1",
     "bootstrap": "^4.1.1",
     "flatpickr": "^4.5.1",
+    "jquery": "^3.3.1",
     "noty": "^3.2.0-beta",
+    "popper.js": "^1.14.3",
     "sweetalert2": "^7.25.0",
     "typeface-quicksand": "^0.0.54",
     "vue": "^2.3.3",
