--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
       ]
     },
     "mac": {
-      "icon": "build/icons/icon.ico"
+      "icon": "build/icons/mac/app.icns"
     },
     "win": {
-      "icon": "build/icons/icon.ico"
+      "icon": "build/icons/win/app.ico"
     },
     "linux": {
-      "icon": "build/icons"
+      "icon": "build/icons/png"
     }
   },
   "dependencies": {
