--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Smart DOCSE",
+  "name": "smart-docse",
   "version": "0.0.0",
   "author": "Shirshak Bajgain <bloggervista@gmail.com>",
   "description": "DOCSE General Purpose Application",
